--- a/input/examples/user/groups/path/GET/UserGroup.xml.example
+++ b/input/examples/user/groups/path/GET/UserGroup.xml.example
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<UserGroup media-type="application/vnd.ez.api.UserGroup+xml" href="/api/ezp/v2/user/groups/1/5/14" id="13" remoteId="3c160cca19fb135f83bd02d911f04db2">
+<UserGroup media-type="application/vnd.ez.api.UserGroup+xml" href="/api/ezp/v2/user/groups/1/5/13" id="12" remoteId="9b47a45624b023b1a76c73b74d704acf">
     <ContentType media-type="application/vnd.ez.api.ContentType+xml" href="/api/ezp/v2/content/types/3"/>
-    <name>Editors</name>
-    <Versions media-type="application/vnd.ez.api.VersionList+xml" href="/api/ezp/v2/content/objects/13/versions"/>
+    <name>Administrator users</name>
+    <Versions media-type="application/vnd.ez.api.VersionList+xml" href="/api/ezp/v2/content/objects/12/versions"/>
     <Section media-type="application/vnd.ez.api.Section+xml" href="/api/ezp/v2/content/sections/2"/>
-    <MainLocation media-type="application/vnd.ez.api.Location+xml" href="/api/ezp/v2/content/locations/1/5/14"/>
-    <Locations media-type="application/vnd.ez.api.LocationList+xml" href="/api/ezp/v2/content/objects/13/locations"/>
+    <MainLocation media-type="application/vnd.ez.api.Location+xml" href="/api/ezp/v2/content/locations/1/5/13"/>
+    <Locations media-type="application/vnd.ez.api.LocationList+xml" href="/api/ezp/v2/content/objects/12/locations"/>
     <Owner media-type="application/vnd.ez.api.User+xml" href="/api/ezp/v2/user/users/14"/>
-    <publishDate>2002-10-06T18:13:14+02:00</publishDate>
-    <lastModificationDate>2002-10-06T18:13:14+02:00</lastModificationDate>
+    <publishDate>2002-10-06T16:12:55+00:00</publishDate>
+    <lastModificationDate>2002-10-06T16:12:55+00:00</lastModificationDate>
     <mainLanguageCode>eng-GB</mainLanguageCode>
     <alwaysAvailable>true</alwaysAvailable>
-    <Version media-type="application/vnd.ez.api.Version+xml" href="/api/ezp/v2/content/objects/13/versions/1">
+    <Version media-type="application/vnd.ez.api.Version+xml" href="/api/ezp/v2/content/objects/12/versions/1">
         <VersionInfo>
-            <id>441</id>
+            <id>440</id>
             <versionNo>1</versionNo>
             <status>PUBLISHED</status>
-            <modificationDate>2002-10-06T18:13:14+02:00</modificationDate>
+            <modificationDate>2002-10-06T16:12:55+00:00</modificationDate>
             <Creator media-type="application/vnd.ez.api.User+xml" href="/api/ezp/v2/user/users/14"/>
-            <creationDate>2002-10-06T18:13:06+02:00</creationDate>
+            <creationDate>2002-10-06T16:12:40+00:00</creationDate>
             <initialLanguageCode>eng-GB</initialLanguageCode>
             <languageCodes>eng-GB</languageCodes>
             <VersionTranslationInfo media-type="application/vnd.ez.api.VersionTranslationInfo+xml">
@@ -27,30 +27,36 @@
                 </Language>
             </VersionTranslationInfo>
             <names>
-                <value languageCode="eng-GB">Editors</value>
+                <value languageCode="eng-GB">Administrator users</value>
             </names>
-            <Content media-type="application/vnd.ez.api.ContentInfo+xml" href="/api/ezp/v2/content/objects/13"/>
+            <Content media-type="application/vnd.ez.api.ContentInfo+xml" href="/api/ezp/v2/content/objects/12"/>
         </VersionInfo>
         <Fields>
             <field>
-                <id>26</id>
+                <id>24</id>
                 <fieldDefinitionIdentifier>name</fieldDefinitionIdentifier>
                 <languageCode>eng-GB</languageCode>
                 <fieldTypeIdentifier>ezstring</fieldTypeIdentifier>
-                <fieldValue>Editors</fieldValue>
+                <fieldValue>Administrator users</fieldValue>
             </field>
             <field>
-                <id>27</id>
+                <id>25</id>
                 <fieldDefinitionIdentifier>description</fieldDefinitionIdentifier>
                 <languageCode>eng-GB</languageCode>
                 <fieldTypeIdentifier>ezstring</fieldTypeIdentifier>
                 <fieldValue/>
             </field>
         </Fields>
-        <Relations media-type="application/vnd.ez.api.RelationList+xml" href="/api/ezp/v2/content/objects/13/versions/1/relations"/>
+        <Relations media-type="application/vnd.ez.api.RelationList+xml" href="/api/ezp/v2/content/objects/12/versions/1/relations"/>
+        <Thumbnail media-type="application/vnd.ez.api.Thumbnail+xml">
+            <resource>/bundles/ezplatformadminui/img/ez-icons.svg#user_group</resource>
+            <width></width>
+            <height></height>
+            <mimeType>image/svg+xml</mimeType>
+        </Thumbnail>
     </Version>
     <ParentUserGroup media-type="application/vnd.ez.api.UserGroup+xml" href="/api/ezp/v2/user/groups/1/5"/>
-    <Subgroups media-type="application/vnd.ez.api.UserGroupList+xml" href="/api/ezp/v2/user/groups/1/5/14/subgroups"/>
-    <Users media-type="application/vnd.ez.api.UserList+xml" href="/api/ezp/v2/user/groups/1/5/14/users"/>
-    <Roles media-type="application/vnd.ez.api.RoleAssignmentList+xml" href="/api/ezp/v2/user/groups/1/5/14/roles"/>
+    <Subgroups media-type="application/vnd.ez.api.UserGroupList+xml" href="/api/ezp/v2/user/groups/1/5/13/subgroups"/>
+    <Users media-type="application/vnd.ez.api.UserList+xml" href="/api/ezp/v2/user/groups/1/5/13/users"/>
+    <Roles media-type="application/vnd.ez.api.RoleAssignmentList+xml" href="/api/ezp/v2/user/groups/1/5/13/roles"/>
 </UserGroup>
