--- a/input/examples/user/roles/POST/RoleInput.xml.example
+++ b/input/examples/user/roles/POST/RoleInput.xml.example
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <RoleInput>
-    <identifier>NewRole1</identifier>
+    <identifier>NewRole</identifier>
 </RoleInput>
