--- a/input/examples/user/roles/id/policies/GET/PolicyList.xml.example
+++ b/input/examples/user/roles/id/policies/GET/PolicyList.xml.example
@@ -1,36 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<PolicyList href="/user/roles/11/policies" media-type="application/vnd.ez.api.PolicyList">
-  <Policy href="/user/roles/11/policies/45" media-type="application/vnd.ez.api.Policy+xml">
-    <id>45</id>
-    <module>content</module>
-    <function>create</function>
-    <limitations>
-      <limitation identifier="Class">
-        <values>
-          <ref href="/content/types/10" media-type="application/vnd.ez.api.ContentType+xml" />
-          <ref href="/content/types/11" media-type="application/vnd.ez.api.ContentType+xml" />
-          <ref href="/content/types/12" media-type="application/vnd.ez.api.ContentType+xml" />
-        </values>
-      </limitation>
-      <limitation identifier="ParentClass">
-        <values>
-          <ref href="/content/types/4" media-type="application/vnd.ez.api.ContentType+xml" />
-        </values>
-      </limitation>
-    </limitations>
-  </Policy>
-  <Policy href="/user/roles/11/policies/49" media-type="application/vnd.ez.api.Policy+xml">
-    <id>49</id>
-    <module>content</module>
-    <function>read</function>
-    <limitations>
-      <limitation identifier="Section">
-        <values>
-          <ref href="/content/sections/1" media-type="application/vnd.ez.api.Section+xml" />
-          <ref href="/content/sections/2" media-type="application/vnd.ez.api.Section+xml" />
-          <ref href="/content/sections/4" media-type="application/vnd.ez.api.Section+xml" />
-        </values>
-      </limitation>
-    </limitations>
-  </Policy>
+<PolicyList media-type="application/vnd.ez.api.PolicyList+xml" href="/api/ezp/v2/user/roles/1/policies">
+    <Policy media-type="application/vnd.ez.api.Policy+xml" href="/api/ezp/v2/user/roles/1/policies/349">
+        <id>349</id>
+        <module>content</module>
+        <function>read</function>
+        <limitations>
+            <limitation identifier="Section">
+                <values>
+                    <ref media-type="application/vnd.ez.api.ref+xml" href="1"/>
+                    <ref media-type="application/vnd.ez.api.ref+xml" href="3"/>
+                    <ref media-type="application/vnd.ez.api.ref+xml" href="6"/>
+                </values>
+            </limitation>
+        </limitations>
+    </Policy>
+    <Policy media-type="application/vnd.ez.api.Policy+xml" href="/api/ezp/v2/user/roles/1/policies/350">
+        <id>350</id>
+        <module>user</module>
+        <function>login</function>
+        <limitations>
+            <limitation identifier="SiteAccess">
+                <values>
+                    <ref media-type="application/vnd.ez.api.ref+xml" href="2282622326"/>
+                    <ref media-type="application/vnd.ez.api.ref+xml" href="1766001124"/>
+                </values>
+            </limitation>
+        </limitations>
+    </Policy>
+    <Policy media-type="application/vnd.ez.api.Policy+xml" href="/api/ezp/v2/user/roles/1/policies/351">
+        <id>351</id>
+        <module>content</module>
+        <function>view_embed</function>
+        <limitations>
+            <limitation identifier="Class">
+                <values>
+                    <ref media-type="application/vnd.ez.api.ref+xml" href="5"/>
+                    <ref media-type="application/vnd.ez.api.ref+xml" href="12"/>
+                </values>
+            </limitation>
+        </limitations>
+    </Policy>
+    <Policy media-type="application/vnd.ez.api.Policy+xml" href="/api/ezp/v2/user/roles/1/policies/352">
+        <id>352</id>
+        <module>user</module>
+        <function>register</function>
+    </Policy>
+    <Policy media-type="application/vnd.ez.api.Policy+xml" href="/api/ezp/v2/user/roles/1/policies/353">
+        <id>353</id>
+        <module>user</module>
+        <function>password</function>
+    </Policy>
 </PolicyList>
