--- a/input/examples/content/types/content_type_id/draft/field_definitions/field_definition_id/GET/FieldDefinition.xml.example
+++ b/input/examples/content/types/content_type_id/draft/field_definitions/field_definition_id/GET/FieldDefinition.xml.example
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<FieldDefinition media-type="application/vnd.ez.api.FieldDefinition+xml" href="/api/ezp/v2/content/types/15/draft/fieldDefinitions/195">
+<FieldDefinition media-type="application/vnd.ez.api.FieldDefinition+xml" href="/api/ezp/v2/content/types/2/fieldDefinitions/195">
     <id>195</id>
-    <identifier>title</identifier>
-    <fieldType>ezstring</fieldType>
-    <fieldGroup></fieldGroup>
-    <position>1</position>
-    <isTranslatable>true</isTranslatable>
-    <isRequired>true</isRequired>
+    <identifier>image</identifier>
+    <fieldType>ezimageasset</fieldType>
+    <fieldGroup>content</fieldGroup>
+    <position>7</position>
+    <isTranslatable>false</isTranslatable>
+    <isRequired>false</isRequired>
     <isInfoCollector>false</isInfoCollector>
-    <defaultValue>New article</defaultValue>
-    <isSearchable>true</isSearchable>
+    <defaultValue>
+        <value key="destinationContentId"/>
+        <value key="alternativeText"/>
+        <value key="source"/>
+    </defaultValue>
+    <isSearchable>false</isSearchable>
     <names>
-        <value languageCode="eng-GB">Title</value>
+        <value languageCode="eng-GB">Image</value>
     </names>
-    <descriptions/>
+    <descriptions>
+        <value languageCode="eng-GB"></value>
+    </descriptions>
     <fieldSettings/>
-    <validatorConfiguration>
-        <value key="StringLengthValidator">
-            <value key="maxStringLength">255</value>
-            <value key="minStringLength"/></value>
-    </validatorConfiguration>
+    <validatorConfiguration/>
 </FieldDefinition>
