--- a/input/examples/content/urlaliases/POST/UrlAliasCreate.xml.example
+++ b/input/examples/content/urlaliases/POST/UrlAliasCreate.xml.example
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <UrlAliasCreate type="LOCATION">
   <location href='/api/ezp/v2/content/locations/1/2/59' />
-  <path>example-urlalias</path>
+  <path>example-global</path>
   <languageCode>eng-GB</languageCode>
   <alwaysAvailable>true</alwaysAvailable>
   <forward>true</forward>
